# Vulkan_Learning_Projects

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  changelog.md
cmakeSettings/: MetaData.cmake
scripts/: cmake_format.bat  launch.bat
src/: CMakeLists.txt
src/BaseProject/: CMakeLists.txt  main.cpp  testingsetup.cpp
src/BaseProject/Base/: base.cpp  base.h
src/BaseProject/Window/: window.cpp  window.h
test_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  VERSION  Vulkan Learning Projects.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
test_build/src/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
test_build/src/BaseProject/: Base_Project.vcxproj  Base_Project.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
test_build/src/BaseProject/Base_Project.dir/Debug/Base_Project.tlog/: Base_Project.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
test_build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
test_build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
