##############################################################
# In The Future, I'll Most Likely Add Options For Building   #
# Individual Projects That Will Then Include Those Projects  #
# Via This File. As Of Now, Just Adds The Subdirectories     #
##############################################################

add_subdirectory(BaseProject)